[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/WallGfx/Door sides.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Door.gd" type="Script" id=2]
[ext_resource path="res://Assets/WallGfx/Door front.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="SpatialMaterial" id=6]
params_cull_mode = 2
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=7]
material = SubResource( 6 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("..:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer3D:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00572365, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -1, 0, 0 ) ]
}

[node name="Door" type="Spatial"]

[node name="RightSide" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 0.5, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="LeftSide" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -0.5, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="Area" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00326685, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="." groups=[
"Interactable",
"Doors",
]]
script = ExtResource( 2 )
door_open_sound = "res://Assets/Sounds/Door Open.ogg"
door_close_sound = "res://Assets/Sounds/Door Close.ogg"

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 5 )

[node name="Front" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 7 )
material/0 = null

[node name="DoorAutoCloseTimer" type="Timer" parent="StaticBody/Front"]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody/Front"]
"anims/Door Open" = SubResource( 8 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="StaticBody/Front"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00819419, 0, 0 )
[connection signal="timeout" from="StaticBody/Front/DoorAutoCloseTimer" to="StaticBody" method="_on_DoorAutoClose_timeout"]
[connection signal="animation_finished" from="StaticBody/Front/AnimationPlayer" to="StaticBody" method="_on_AnimationPlayer_animation_finished"]
